<resources>
    <string name="app_name">YUNews</string>
    <string name="signup_title">Login to get notifications on latest news of selected categories</string>
    <string name="skip_to_home">Skip to Home</string>
    <string name="send_otp">Send OTP</string>
    <string name="mobile_number">Enter Mobile Number</string>

    <string name="verification_code">Verification Code</string>
    <string name="we_have_send_the_otp_to">We have sent OTP to</string>
    <string name="if_you_didn_t_receive_a_otp_resend">Didn\'t receive an OTP!</string>
    <string name="verify_proceed"><![CDATA[Verify & Proceed]]></string>
    <string name="resend">Resend</string>

    <string name="sample_text">YouTube is an American online video sharing and social media platform owned by Google. It was launched in February 2005 by Steve Chen, Chad Hurley, and Jawed Karim. It is the second most visited website, with more than one billion monthly users who collectively watch more than one billion hours of videos each day</string>
    <string name="sample_text_long">YouTube is an American online video sharing and
        social media platform owned by Google. It was launched in February 2005 by Steve Chen,
        Chad Hurley, and Jawed Karim. It is the second most visited website, with more
        than one billion monthly users who collectively watch more than one billion hours of
        videos each day. YouTube is an American online video sharing and
        social media platform owned by Google. It was launched in February 2005 by Steve Chen,
        Chad Hurley, and Jawed Karim. It is the second most visited website, with more
        than one billion monthly users who collectively watch more than one billion hours of
        videos each day. YouTube is an American online video sharing and
        social media platform owned by Google.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="report">Report</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_your_language">Select your language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="you_can_chnage_from_settings">You can change from settings anytime</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="my_feed">My Feed</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="indonesia">Bahasa Indonesia</string>
    <string name="login">Login</string>
    <string name="enter_address_or_phone_number">Enter address or Phone number</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="discover">Discover</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>
    <string name="categories">Categories</string>
    <string name="suggested_topics">Suggested Topics</string>
    <string name="swipe_left_to_redirect_the_website_story_to_website_url">Swipe left to redirect the website story to website url</string>
    <string name="skip_now">Continue without logging in</string>
</resources>