<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/bg_top_corners"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/report"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />
    <!-- app:drawableEndCompat="@drawable/ic_cancel_red"-->


    <EditText
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="start"
        android:hint="@string/description"
        android:maxLines="10"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />
<!--        android:background="@drawable/bg_grayborder_rounded"
-->
    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="@dimen/_10sdp">

        <TextView
            android:id="@+id/txtSubmit"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/silver"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>
